--- a/Trabajos/Examen/Examen_2do_parcial.ipynb
+++ b/Trabajos/Examen/Examen_2do_parcial.ipynb
@@ -38,8 +38,7 @@
     "\n",
     "import Integral as In\n",
     "import numpy as np\n",
-    "import Raiz as rr\n",
-    "from scipy.integrate import dblquad"
+    "import Raiz as rr"
    ]
   },
   {
