--- a/Trabajos/Trabos_siempre_aquí-Copy1.ipynb
+++ b/Trabajos/Trabos_siempre_aquí-Copy1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 91,
    "id": "3fcc4eb2-1bab-4838-be8c-17a0301ff6cc",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "fc5f4d5b-d129-4090-b437-868678d1e288",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,6 @@
     "\n",
     "import Integral as In\n",
     "import numpy as np\n",
-    "import Raiz as rr\n",
     "from scipy.integrate import dblquad"
    ]
   },
@@ -142,10 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "id": "03a97128-922d-4501-8f8b-0106942b00fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p0 --> 0.6660254037844386 p1--> 1.0660254037844386\n",
+      "p0 --> 0.1420201433256688 p1--> 0.5420201433256688\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.86113631, -0.33998104,  0.33998104,  0.86113631]),\n",
+       " array([0.34785485, 0.65214515, 0.65214515, 0.34785485]))"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def RecBonnet(n,x):\n",
     "    p0, pn = 1,x\n",
@@ -173,9 +192,10 @@
     "    \n",
     "    f = lambda x: legendre(n, x)[0]  \n",
     "    for i in range(npos):\n",
-    "        p0 = np.cos(np.pi*(4*i+3)/(4*n+2))  \n",
-    "        p1 = p0 + delt\n",
-    "        raiz = rr.secante1([p0, p1], f, error, tol)\n",
+    "        p0 = np.cos(np.pi*(4*i+3)/(4*n+2)) - delt \n",
+    "        p1 = p0 + 2*delt\n",
+    "        print('p0 -->', p0,'p1-->', p1)\n",
+    "        raiz = rr.secante2([p0, p1], f, error, tol)\n",
     "        raices[i] = -raiz\n",
     "        raices[-1-i] = raiz\n",
     "    return raices\n",
@@ -184,12 +204,13 @@
     "    xraiz = legraiz(n, delt, error, tol)\n",
     "    Pn = legendre(n, xraiz)[1]\n",
     "    W = 2/(1-xraiz**2)/Pn**2\n",
-    "    return xraiz, W\n"
+    "    return xraiz, W\n",
+    "Gus_param(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "3ce6e872-572d-4a5c-97c6-78494fe83c25",
    "metadata": {},
    "outputs": [
@@ -197,7 +218,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.065384140185414\n"
+      "inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2514/1122634417.py:37: RuntimeWarning: divide by zero encountered in divide\n",
+      "  W = 2/(1-xraiz**2)/Pn**2\n"
      ]
     }
    ],
@@ -257,6 +286,248 @@
     "        \n",
     "    return ((a[1]-a[0])*I_G)/2\n",
     "I_Gauss([1.,1.],[1,3],[-0.57735027 ,0.57735027], lambda x: x,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173eb2ed-8f63-44aa-89c8-9c38df31668e",
+   "metadata": {},
+   "source": [
+    "# Dividir intervalos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e9cc86df-1193-409f-a2c8-70e5c064b1cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def es_flotante(variable):\n",
+    "    \"\"\"\n",
+    "    -----------------------\n",
+    "    Verificador de numeros\n",
+    "    ------------------------\n",
+    "    \n",
+    "    Parametros:\n",
+    "    float: una valor de tipo int o flotante\n",
+    "    \n",
+    "    -----------------------------------\n",
+    "    Salida: Regresa un verdadero si cumple con un numero y un falso si es un caracter\n",
+    "    ----------------------------------\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        float(variable)\n",
+    "        return True\n",
+    "\n",
+    "    except:\n",
+    "        return False\n",
+    "\n",
+    "#Meter intervalo\n",
+    "\n",
+    "def intr_int():\n",
+    "    \"\"\"\n",
+    "    --------------------\n",
+    "    Ingresar Parametros\n",
+    "    --------------------\n",
+    "\n",
+    "    Parametros:\n",
+    "    a: El intervalo menor\n",
+    "    b: El intervalos mayor\n",
+    "    \n",
+    "    -----------------------\n",
+    "    Salida: Regresa una lista con los intervalos\n",
+    "    -----------------------\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    a = input(\"Ingrese el intervalo izquierdo: \")\n",
+    "    b = input(\"Ingrese el intervalo derecho: \")\n",
+    "    return [a,b]\n",
+    "\n",
+    "\n",
+    "#Esta funcion se encarga de ver que el producto de las dos funciones se menor que cero\n",
+    "\n",
+    "def sigma(funcion, x, tol = 1e-4):\n",
+    "    \"\"\"\n",
+    "    --------------------------------------\n",
+    "    Retrorno de sigo evaluado en funcion\n",
+    "    --------------------------------------\n",
+    "    \n",
+    "    Parametros:\n",
+    "    f: Una funcion lambda o def, la cual sera nuestra función\n",
+    "    x: Nuestras variables que se encargaran de evaluar nuestra función\n",
+    "\n",
+    "    -------------------------------------------------------------\n",
+    "    Salida: Regresa -1 si f(a)*f(b) es menor y 1 si es mayor\n",
+    "    -------------------------------------------------------------\n",
+    "    \"\"\"\n",
+    "\n",
+    "    a, b = x[0], x[1]\n",
+    "    sigm = 1 if funcion(a)*funcion(b) > 0 else -1\n",
+    "    if funcion(a)*funcion(b) > 0:\n",
+    "        sigm = 1\n",
+    "    elif (funcion(a)*funcion(b) == 0 ) or funcion(a)*funcion(b) <= tol:\n",
+    "        sigm = 0\n",
+    "    else: \n",
+    "        sigm = -1\n",
+    "    return sigm\n",
+    "\n",
+    "#Esta se encarga de guardar los intervalos donde exista una posible raiz\n",
+    "\n",
+    "\n",
+    "def localizador(f,x0,tol = 1e-4, Ni = 100):\n",
+    "    \"\"\"\n",
+    "    ----------------------------------------------------\n",
+    "    Busca las posibles raices en una funcion\n",
+    "    ----------------------------------------------------\n",
+    "    Parametros:\n",
+    "    f: Funcion lambda o def, f(x).\n",
+    "    intervalo: los extremos del intervalo a analizar\n",
+    "    Nint: La cantidad de puntos a partir\n",
+    "\n",
+    "    ----------------------------------------------------------------------------------------------\n",
+    "    Salida: Una lista que aguarda varias posiciones para nuestras posibles raices, la cual alberga otra lista con dos posiciones donde se encuentra una raiz\n",
+    "    ----------------------------------------------------------------------------------------------------\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    x1 = (x0[1]-x0[0])/Ni\n",
+    "    x2 = []\n",
+    "    x3 = x0[0] + x1\n",
+    "    x4 = x3\n",
+    "    x2.append(x3)\n",
+    "    for i in range(Ni):\n",
+    "        x4 = x4 + x1\n",
+    "        x2.append(x4)\n",
+    "    localiz = []\n",
+    "    for i in range(1, Ni):\n",
+    "        comparar = [x2[i-1],x2[i]]\n",
+    "        if sigma(f, comparar, tol) < 0 or sigma(f, comparar, tol) == 0:\n",
+    "            localiz.append(comparar)\n",
+    "    return localiz\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "cda1f58f-5bfe-414c-8976-36d87d4e6ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1.732050807559437, 1.7320508075905212]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rr.raiz_N([-7,7], lambda x: (1-np.cos(x))/x**2)\n",
+    "rr.raiz_secante1([0,4], lambda x: x**2-7*x+12)\n",
+    "rr.raiz_secante2([-2,2], lambda x: x**2-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bfb2489e-283b-410a-834c-6af942236be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def secante2(x,funcion, errores = 'E_ab',tol = 1e-4):\n",
+    "    \"\"\"\n",
+    "    El metodo de la secante para una sola raiz\n",
+    "    \n",
+    "    Los parametros que cuenta:\n",
+    "    x: Recibe dos parametros, usualmete los extremos del intervalo [a,b] a analizar.\n",
+    "    f: La funcion lambda o el objeto def , estos refresentan la funcion que se analizara.\n",
+    "\n",
+    "    errores: Tipos de errores, E_ab (error absoluto), E_rel (error relativo), \n",
+    "    E_RPD (error diferencia de procentaje relativo), E_rel3\n",
+    "    (error de diferencia y cambio relativo), E_dis (error de sitancia), E_rel2 (error relativo para convergencias cercanas a cero).\n",
+    "    \n",
+    "    tol: la presicion a buscar, por defecto es en 1e-4\n",
+    "\n",
+    "    ------------------------\n",
+    "    Salida: raiz\n",
+    "    ------------------------\n",
+    "\n",
+    "    \"\"\"\n",
+    "    if sigma(funcion, x) == -1 or sigma(funcion, x) == 0:\n",
+    "        operador = True\n",
+    "        raiz = 0\n",
+    "        if es_flotante(x[0]) == True and es_flotante(x[1]) == True:    \n",
+    "            w = [float(x[i]) for i in range(2)]\n",
+    "            while operador:\n",
+    "                p = w[1]-(funcion(w[1]) * (w[1] - w[0]))/(funcion(w[1])-funcion(w[0]))\n",
+    "                if error(errores)(w[0],w[1]) < tol:\n",
+    "                    #print(\"La raiz de su función es: \", p)\n",
+    "                    raiz = p\n",
+    "                    operador = False\n",
+    "                w[0] = w[1]\n",
+    "                w[1] = p\n",
+    "            return raiz\n",
+    "        else:\n",
+    "            print(\"Valores erroneos\")\n",
+    "    else:\n",
+    "        raiz = None\n",
+    "        return raiz\n",
+    "def raiz_secante2(x1, f, errores = 'E_ab', tol = 1e-4):\n",
+    "    \"\"\"\n",
+    "    El metodo de la secante 2 para una o más raices\n",
+    "\n",
+    "    Los parametros que cuenta:\n",
+    "    x1: Recibe dos parametros, usualmete los extremos del intervalo [a,b] a analizar.\n",
+    "    f: La funcion lambda o el objeto def , estos refresentan la funcion que se analizara.\n",
+    "\n",
+    "    errores: Tipos de errores, E_ab (error absoluto), E_rel (error relativo), \n",
+    "    E_RPD (error diferencia de procentaje relativo), E_rel3\n",
+    "    (error de diferencia y cambio relativo), E_dis (error de sitancia), E_rel2 (error relativo para convergencias cercanas a cero).\n",
+    "    \n",
+    "    tol: la presicion a buscar, por defecto es en 1e-4\n",
+    "\n",
+    "    ------------------------\n",
+    "    Salida: raices\n",
+    "    ------------------------\n",
+    "    \"\"\"\n",
+    "    if es_flotante(x1[0]) == True and es_flotante(x1[1]) == True:\n",
+    "        w = [float(x1[i]) for i in range(2)]\n",
+    "        raiz = []\n",
+    "        if sigma(f,w) == -1 or sigma(f,w) == 0: \n",
+    "            raiz_loop = localizador(f, w)\n",
+    "            for i in raiz_loop:\n",
+    "                p = secante_2(i, f, errores, tol)\n",
+    "                raiz.append(p)\n",
+    "            return raiz\n",
+    "        else:\n",
+    "            raiz.append(None)\n",
+    "            return raiz\n",
+    "    else:\n",
+    "        print(\"Valores erroneos\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "87e37336-626c-4169-acfc-e71f9038e766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Raiz as rr\n",
+    "#np.poly(2,-6,10,-6)\n",
+    "l = rr.raiz_secante2([0,4], lambda x: x**2-1)\n",
+    "print(l)"
    ]
   }
  ],
