--- a/Trabajos/Trabos_siempre_aquí-Copy1.ipynb
+++ b/Trabajos/Trabos_siempre_aquí-Copy1.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bd8c3d48-ef41-40fe-9423-73d09fb8f136",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "id": "3fcc4eb2-1bab-4838-be8c-17a0301ff6cc",
    "metadata": {},
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "fc5f4d5b-d129-4090-b437-868678d1e288",
    "metadata": {},
    "outputs": [],
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "id": "87e37336-626c-4169-acfc-e71f9038e766",
    "metadata": {},
    "outputs": [
@@ -519,15 +527,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0]\n"
+      "[None]\n"
      ]
     }
    ],
    "source": [
     "import Raiz as rr\n",
     "#np.poly(2,-6,10,-6)\n",
-    "l = rr.raiz_secante2([0,4], lambda x: x**2-1)\n",
+    "l = rr.raiz_secante2([2,4], lambda x: x**2-1)\n",
     "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bf5655-54c8-4d8b-bf60-10eb9bbd5ff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Clase del 8 de abril\n",
+    "def Pesos(datos):\n",
+    "    n = len(datos)\n",
+    "    "
    ]
   }
  ],
